--- a/styles/style.css
+++ b/styles/style.css
@@ -36,3 +36,28 @@ body button {
     float: left;
     padding: 20px 0px;
 }
+
+canvas {
+  border: 1px solid #870007;
+}
+
+#game-over {
+  position: fixed;
+  top: 50%;
+  left: 0;
+  z-index: 1000;
+  background-color: black;
+  color: white;
+  display: none;
+  width: 100%;
+  height: 50vh;
+}
+
+.gameovertext {
+  color: #870007;
+  font-size: 50px;
+}
+
+.yourscore {
+  font-size: 40px;
+}
